# BPI-R40-V40-T3-Android6

./: README.md
android/: android5.sh
android/bootable/recovery/: recovery.cpp  screen_ui.cpp  screen_ui.h  ui.cpp  ui.h
android/bootable/recovery/minui/: .Android.mk.swp  Android.mk  graphics_fbdev.cpp
android/device/softwinner/common/: common.mk  init.common.rc  vendorsetup.sh
android/device/softwinner/common/config/: tablet_core_hardware.xml
android/device/softwinner/common/sayeye/: Android.mk
android/device/softwinner/t3-common/: BoardConfigCommon.mk  t3-common.mk
android/device/softwinner/t3-p1/: AndroidProducts.mk  BoardConfig.mk  fstab.sun8iw11p1  init.sun8iw11p1.rc  package.sh  t3_p1.mk  vendorsetup.sh
android/device/softwinner/t3-p1/bluetooth/: bdroid_buildcfg.h
android/device/softwinner/t3-p1/recovery/: Android.mk
android/device/softwinner/t3-p3/: AndroidProducts.mk  BoardConfig.mk  fstab.sun8iw11p1  init.sun8iw11p1.rc  package.sh  t3_p3.mk  ueventd.sun8iw11p1.rc  vendorsetup.sh
android/device/softwinner/t3-p3/bluetooth/: bdroid_buildcfg.h
android/device/softwinner/t3-p3/configs/: camera.cfg  sunxi-keyboard.kl
android/device/softwinner/t3-p3/recovery/: Android.mk
android/device/softwinner/t3-p3/trd/: 8723bu.ko  config.ini  gocsdk  rtl8723b_config  rtl8723b_fw  serial  wb.ko
android/frameworks/av/camera/: Camera.cpp  ICamera.cpp  ICameraService.cpp
android/frameworks/av/include/camera/: Camera.h  (+3 more)
android/frameworks/av/media/libcedarx/awrecorder/: AudioEncodeComponent.cpp  EncDataComponent.cpp  Makefile.am  VideoEncodeComponent.cpp  VideoEncodeComponent.h  awMessageQueue.cpp  awMessageQueue.h  awencoder.cpp
android/frameworks/av/media/libcedarx/demo/demoVdecoder/: Android.mk  Makefile.am  demoVdecoder.c
android/frameworks/av/media/libcedarx/demo/demoVencoder/: Android.mk  EncoderTest.c  Makefile.am
android/frameworks/av/media/libcedarx/demo/xmetademo/: Makefile.am  xmetademo.c
android/frameworks/av/media/libcedarx/demo/xplayerdemo/: Makefile.am  xplayerdemo.cpp
android/frameworks/av/media/libcedarx/libcore/common/iniparser/: Android.mk  Makefile.am  iniparserapi.c
android/frameworks/av/media/libcedarx/libcore/common/plugin/: Android.mk  Makefile.am  cdx_plugin.c
android/frameworks/av/media/libcedarx/libcore/playback/: AWPostProcess.h  Android.mk  IEC61937.h  Makefile.am  VideoFrameScheduler.cpp  VideoFrameSchedulerWrap.cpp  asoundlib.h  audioDecComponent.cpp  audioDecComponent.h  audioRenderComponent.cpp  audioRenderComponent.h  avtimer.cpp  avtimer.h  bitrateEstimater.cpp  deinterlace.cpp  deinterlace.h  deinterlaceHw.cpp  deinterlaceHw.h  deinterlaceSw.h  framerateEstimater.cpp  framerateEstimater.h  layerControl.h  messageQueue.cpp  messageQueue.h  player.cpp  player_i.h  postprocess.h  soundControl.h  streamManager.cpp  streamManager.h  subtitleDecComponent.cpp  subtitleDecComponent.h  subtitleRenderComponent.cpp  subtitleRenderComponent.h  videoDecComponent.cpp  videoDecComponent.h  videoRenderComponent.cpp  videoRenderComponent.h  videoRenderComponent_newDisplay.cpp
android/frameworks/av/media/libcedarx/libcore/playback/include/: player.h
android/frameworks/av/media/libcedarx/libcore/playback/layerControl/: layerControl_android.cpp  layerControl_android_newDisplay.cpp  layerControl_linux.cpp  layerControl_null.cpp
android/frameworks/av/media/libcedarx/libcore/playback/layerControl/1639/: display.h  drv_display.h  drv_display_legacy.h  drv_display_sun3i.h  types.h
android/frameworks/av/media/libcedarx/libcore/playback/soundControl/: IEC61937.c  soundControl_android.cpp  soundControl_android_raw.cpp  soundControl_linux.cpp  soundControl_null.cpp
android/frameworks/av/media/libcedarx/libcore/playback/subtitleNativeDisplay/: subtitleNativeDisplay.cpp  subtitleNativeDisplay.h  subtitleNativeDisplayApi.h
android/frameworks/av/media/libcedarx/xplayer/: AwTypes.h  Makefile.am  awMessageQueue.cpp  awMessageQueue.h  awplayer.cpp  awplayer.h  cache.cpp  demuxComponent.cpp  demuxComponent.h  mediaInfo.h
android/frameworks/base/: Android.mk
android/frameworks/base/api/: current.txt  system-current.txt
android/hardware/aw/hwc/: Android.mk
android/hardware/aw/librotation/: Android.mk  aw_rotation.h  cpu_rotate.c  cpu_rotate.h  g2d_rotate.c  g2d_rotate.h  neon_do_rotate.S  neon_rotate.c  neon_rotate.h  rotation.c  rotation_sys.h  tr_rotate.c  tr_rotate.h
android/hardware/aw/lights/: Android.mk
android/hardware/libhardware_legacy/audio/: AudioPolicyManagerBase.cpp
android/hardware/libhardware_legacy/wifi/: Android.mk  wifi.c
android/system/core/init/: Android.mk  boostup.cpp  init_mem_opt.c  property_service.cpp
android/system/core/libcutils/: fs_config.c
android/system/core/rootdir/: init.rc
android/system/vold/: Android.mk  CommandListener.cpp  Disk.cpp  NetlinkManager.cpp  PublicVolume.cpp  PublicVolume.h  Utils.cpp  VolumeManager.cpp  VolumeManager.h
android/system/vold/fs/: Exfat.cpp  Ntfs.cpp  iso9660.cpp
lichee/brandy/: .config  a.txt  build.sh
lichee/brandy/pack_tools/include/: toc_head.h
lichee/brandy/pack_tools/script/: script.c
lichee/brandy/pack_tools/update_boot0/: makefile  update_boot0.c
lichee/brandy/pack_tools/update_scp/: update_scp.c
lichee/brandy/u-boot-2014.07/: Makefile
lichee/brandy/u-boot-2014.07/common/: board_f.c  board_r.c  cmd_boota.c
lichee/brandy/u-boot-2014.07/include/: sys_config_old.h
lichee/buildroot/scripts/: mkcmd.sh  mkrule
lichee/linux-3.10/: .config.mark  .gitignore
lichee/linux-3.10/drivers/char/: Kconfig  Makefile
lichee/linux-3.10/drivers/input/: sw-device.c
lichee/linux-3.10/drivers/irqchip/: irq-gic.c
lichee/linux-3.10/drivers/power/: Kconfig
lichee/linux-3.10/drivers/rtc/: rtc-sunxi.c
lichee/linux-3.10/include/linux/: sunxi-sid.h  sys_config.h
lichee/linux-3.10/include/video/: sunxi_display2.h
lichee/linux-3.10/kernel/cpu/: idle.c
lichee/linux-3.10/modules/gpu/: Makefile
lichee/linux-3.10/net/rfkill/: core.c
lichee/linux-3.10/output/: .config  sunxi.dtb
lichee/linux-3.10/scripts/: build.sh
lichee/tools/pack/: pack
(+908 files in other folders)
